modify bean implementation